build: 完成学生相关操作
