# backend/docs/swagger.yaml
@@ -18,43 +18,56 @@ definitions:
         example: "0121"
         type: string
     type: object
-  model.CourseByStuResponse:
+  model.OfferedCourse:
     properties:
-      credit:
-        description: 学分
-        type: integer
-      department:
-        description: 所属院系
-        type: string
-      id:
-        type: integer
-      name:
-        description: 课名
-        type: string
-      number:
+      course_id:
         description: 课号
-        type: string
-      score:
-        description: 成绩
         type: integer
-      student_name:
-        description: 学生名
-        type: string
-      teacher_name:
-        description: 老师名
-        type: string
+      selections:
+        items:
+          $ref: '#/definitions/model.Selection'
+        type: array
+      teacher_id:
+        description: 教师工号
+        type: integer
       term:
         description: 学期
+        example: 22-冬季学期
+        type: string
+    type: object
+  model.OfferedCourseRes:
+    properties:
+      credit:
+        type: integer
+      department:
+        type: string
+      name:
+        type: string
+      number:
+        type: string
+      score:
+        type: integer
+      student_name:
+        type: string
+      teacher_name:
+        type: string
+      term:
         type: string
     type: object
   model.Selection:
     properties:
+      offeredCourse:
+        $ref: '#/definitions/model.OfferedCourse'
+        type: object
       offeredCourseID:
         type: integer
       score:
         description: 分数, -1表示未评分
         example: 75
         type: integer
+      student:
+        $ref: '#/definitions/model.Student'
+        type: object
       studentID:
         type: integer
     type: object
@@ -62,18 +75,15 @@ definitions:
     properties:
       age:
         description: 年龄
-        example: 21
         type: integer
-      department_id:
-        description: 所属院系
+      departmentID:
+        description: 所属院系号
         type: integer
       name:
         description: 姓名
-        example: 王二
         type: string
       number:
         description: 学号
-        example: "0198"
         type: string
       password:
         description: 密码
@@ -86,7 +96,33 @@ definitions:
         type: array
       sex:
         description: 性别
-        example: 男
+        type: string
+    type: object
+  model.StudentCreateReq:
+    properties:
+      age:
+        type: integer
+      name:
+        type: string
+      number:
+        type: string
+      password:
+        type: string
+      sex:
+        type: string
+    type: object
+  model.StudentRes:
+    properties:
+      age:
+        type: integer
+      department_name:
+        type: string
+      name:
+        type: string
+      number:
+        description: ID uint `json:"id"`
+        type: string
+      sex:
         type: string
     type: object
 info:
@@ -302,43 +338,15 @@ paths:
       - selection
   /student:
     get:
-      description: 获取学生 可以自由添加筛选属性
-      parameters:
-      - description: 年龄
-        example: 21
-        in: query
-        name: age
-        type: integer
-      - description: 所属院系
-        in: query
-        name: department_id
-        type: integer
-      - description: 姓名
-        example: 王二
-        in: query
-        name: name
-        type: string
-      - description: 学号
-        example: "0198"
-        in: query
-        name: number
-        type: string
-      - description: 密码
-        example: "123"
-        in: query
-        name: password
-        type: string
-      - description: 性别
-        example: 男
-        in: query
-        name: sex
-        type: string
+      description: 获取所有学生信息
       responses:
         "200":
           description: OK
           schema:
-            type: string
-      summary: 获取学生
+            items:
+              $ref: '#/definitions/model.StudentRes'
+            type: array
+      summary: 获取所有学生信息
       tags:
       - student
     post:
@@ -349,7 +357,7 @@ paths:
         name: student
         required: true
         schema:
-          $ref: '#/definitions/model.Student'
+          $ref: '#/definitions/model.StudentCreateReq'
       responses:
         "200":
           description: OK
@@ -359,9 +367,23 @@ paths:
       tags:
       - student
   /student/{id}:
+    delete:
+      description: 根据id删除学生
+      parameters:
+      - description: student ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 根据id删除学生
+      tags:
+      - student
     get:
-      consumes:
-      - application/json
       description: 根据id获取学生信息
       parameters:
       - description: student ID
@@ -369,13 +391,11 @@ paths:
         name: id
         required: true
         type: integer
-      produces:
-      - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Student'
+            $ref: '#/definitions/model.StudentRes'
       summary: 根据id获取学生信息
       tags:
       - student
@@ -401,7 +421,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/model.CourseByStuResponse'
+              $ref: '#/definitions/model.OfferedCourseRes'
             type: array
       summary: 获取指定学生的所有课程
       tags:
